--- a/tour4.html
+++ b/tour4.html
@@ -99,6 +99,6 @@ Ganpatipule Beach is a pristine and scenic beach located in Ratnagiri district o
 </div>
 
 </body>
-<a href="index.html.html">Back</a>
+<a href="index.html">Back</a>
 
 </html>
