--- a/tour2.html
+++ b/tour2.html
@@ -82,7 +82,8 @@ not allowed inside the hill station. This helps in reducing pollution and mainta
     </p>
  </div>
 <a href="ex3.html">Next</a>
-<a href="index.html.html">Back</a>
+<a href="index.html">Back</a>
 
 </body>
 </html>
+
